apps/dagster/auth/manifests/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dagster
  namespace: dagster
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "dagster.k8s.jeromeswannack.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dagster-auth-oauth2-proxy
            port:
              number: 4180
